--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,7 @@
 <!-- Toolbar -->
 <div class="toolbar" role="banner">
-  logo
+  <!--logo-->
+  <div style="padding-left: 12px">welcome</div>
   <div class="spacer"></div>
   <a aria-label="Roberto Manfreda on GitHub" target="_blank" rel="noopener" href="https://github.com/robertomanfreda"
      title="GitHub">
@@ -34,7 +35,7 @@
   <div class="card-container">
     <div class="card-big">
       <p style="text-align: center">
-        Welcome guest, my name is Roberto.<br>
+        My name is Roberto.<br>
         I'm passionate about programming, computer security and hacking. I work as a computer developer and in my spare
         time I enjoy programming, discovering and experimenting.<br>
         The technologies I work with most frequently are: Java, Spring Boot, Angular, BASH, Docker and Android.<br>
@@ -43,13 +44,13 @@
         I'm not a graduate, I learned a lot of my knowledge on the web thanks to sites like StackOverflow, GitHub,
         Wikipedia and other blogs of people like me (who want to share without any price).<br>
         I see on the internet an immense source of knowledge, one of the most complex human creations that gives us an
-        enormous source of free knowledge.
+        enormous source of <br>FREE KNOWLEDGE.
       </p>
     </div>
   </div>
 
   <!-- resources -->
-  <h2>$ projects</h2>
+  <h2>$ my open source projects</h2>
 
   <div class="card-container">
     <a class="card" target="_blank" rel="noopener" href="https://github.com/robertomanfreda/sproxy">
@@ -58,11 +59,39 @@
         <path d="M9.4 16.6L4.8 12l4.6-4.6L8 6l-6 6 6 6 1.4-1.4zm5.2 0l4.6-4.6-4.6-4.6L16 6l6 6-6 6-1.4-1.4z"/>
       </svg>
     </a>
+
+    <a class="card" target="_blank" rel="noopener" href="https://github.com/robertomanfreda/ssh-notifier-daemon">
+      <span class="desc-icon">SSH Notifier Daemon</span>
+      <svg class="material-icons" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
+        <path d="M9.4 16.6L4.8 12l4.6-4.6L8 6l-6 6 6 6 1.4-1.4zm5.2 0l4.6-4.6-4.6-4.6L16 6l6 6-6 6-1.4-1.4z"/>
+      </svg>
+    </a>
+
+    <a class="card" target="_blank" rel="noopener" href="https://github.com/robertomanfreda/rlogger">
+      <span class="desc-icon">RLogger</span>
+      <svg class="material-icons" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
+        <path d="M9.4 16.6L4.8 12l4.6-4.6L8 6l-6 6 6 6 1.4-1.4zm5.2 0l4.6-4.6-4.6-4.6L16 6l6 6-6 6-1.4-1.4z"/>
+      </svg>
+    </a>
+
+    <a class="card" target="_blank" rel="noopener" href="https://github.com/robertomanfreda/sqlinjector">
+      <span class="desc-icon">SQLInjector</span>
+      <svg class="material-icons" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
+        <path d="M9.4 16.6L4.8 12l4.6-4.6L8 6l-6 6 6 6 1.4-1.4zm5.2 0l4.6-4.6-4.6-4.6L16 6l6 6-6 6-1.4-1.4z"/>
+      </svg>
+    </a>
+
+    <a class="card" target="_blank" rel="noopener" href="https://github.com/robertomanfreda/linux-daemons-creator">
+      <span class="desc-icon">Linux Daemons creator</span>
+      <svg class="material-icons" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
+        <path d="M9.4 16.6L4.8 12l4.6-4.6L8 6l-6 6 6 6 1.4-1.4zm5.2 0l4.6-4.6-4.6-4.6L16 6l6 6-6 6-1.4-1.4z"/>
+      </svg>
+    </a>
   </div>
 
 
   <!-- resources -->
-  <h2>$ resources</h2>
+  <h2>$ learning resources</h2>
 
   <div class="card-container">
     <a class="card" target="_blank" rel="noopener" href="#">
