--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -556,7 +556,7 @@ a:hover {
 
 .contact .info-box h3 {
   font-size: 20px;
-  color: #fff);
+  color: #fff;
   font-weight: 700;
   margin: 10px 0 8px 68px;
 }
